# Yee

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENGINE-STUDIO-ROADMAP.md  FILTER-DESIGN-ROADMAP.md  FULL-SUITE-ROADMAP.md  QUICKSTART-FILTER-APP.md  README.md  RF-TOOL-ROADMAP.md  ROADMAP.md  TECH_STACK.md  THIRD_PARTY_LICENSES.md  rust-toolchain.toml
crates/yee-bench/: Cargo.toml  README.md
crates/yee-bench/benches/: bo_step.rs  compute_step.rs  fdtd_step.rs  gmres_vs_direct.rs  gp_fit.rs  lumped_resistor.rs  mom_solve.rs  plane_wave_step.rs
crates/yee-bench/src/: lib.rs
crates/yee-cli/: Cargo.toml  README.md  ROADMAP.md
crates/yee-cli/completions/: _yee  yee.bash  yee.fish
crates/yee-cli/src/: filter.rs  main.rs  plot.rs
crates/yee-cli/tests/: cli.rs  cli_bench.rs  cli_fdtd_run.rs  cli_filter.rs  cli_finite_q_s2p.rs  cli_jlcpcb.rs  cli_jlcpcb_autoroute.rs  cli_lumped_export.rs  cli_plot_touchstone.rs  cli_s2p_phase.rs  cli_validate.rs  design_offline.rs
crates/yee-cli/validation/: README.md
crates/yee-compute/: Cargo.toml
crates/yee-compute/examples/: bench.rs
crates/yee-compute/src/: cpml.rs  cpu.rs  dispersive.rs  drive.rs  engine.rs  error.rs  fields.rs  gpu.rs  lib.rs  materials.rs  spec.rs
crates/yee-compute/tests/: cavity_resonance.rs  cpml_reflection.rs  cpu_aperture_parity.rs  cpu_dispersive_parity.rs  cpu_drive_parity.rs  cpu_e1_reference_parity.rs  cpu_h_probe.rs  cpu_reference_parity.rs  fp32_drift.rs  gpu_aperture_parity.rs  gpu_cpu_parity.rs  gpu_dispersive_parity.rs  gpu_e1_parity.rs  gpu_graded_parity.rs  gpu_h_probe_parity.rs  gpu_ntff_dipole.rs  gpu_perface_cpml_parity.rs  gpu_thinwire_rejected.rs  graded_interface_reflection.rs  graded_uniform_bitexact.rs  line_eeff.rs  ntff_dipole.rs  sheet_loss.rs  thin_wire.rs
crates/yee-core/: Cargo.toml  README.md  ROADMAP.md
crates/yee-core/src/: lib.rs
crates/yee-core/tests/: freq.rs  units.rs
crates/yee-core/validation/: README.md
crates/yee-cuda/: Cargo.toml  README.md  ROADMAP.md
crates/yee-cuda/kernels/: hello.cu
crates/yee-cuda/src/: backend.rs  cusolver.rs  lib.rs  nvrtc.rs
crates/yee-cuda/validation/: README.md
crates/yee-design/: Cargo.toml  substrates.toml
crates/yee-design/src/: emit.rs  estimate.rs  intent.rs  intent_schema.json  lib.rs  offline.rs
crates/yee-design/tests/: balanis_example.rs  emit_roundtrip.rs  intent.rs
crates/yee-design/validation/: README.md  prompts.toml
crates/yee-engine/: Cargo.toml
crates/yee-engine/src/: automesh.rs  board.rs  farfield.rs  lib.rs  sparams.rs
crates/yee-engine/tests/: antenna_efficiency.rs  antenna_gain.rs  antenna_patch_array.rs  antenna_patch_array_pattern.rs  antenna_patch_inset.rs  antenna_patch_match_loop.rs  antenna_patch_pattern.rs  antenna_patch_s11.rs  antenna_quasi_yagi.rs  antenna_quasi_yagi_pattern.rs  antenna_stub_match.rs  automesh_graded.rs  automesh_stackup.rs  board_automesh.rs  board_conductor_loss.rs  board_loss.rs  board_port_power.rs  board_short_gamma.rs  board_sparams_complex.rs  board_via.rs  engine_graded_notch.rs  engine_miter.rs  engine_thinwire_dipole.rs  import_twin.rs  ntff_absolute_scale.rs  sparams_stub_notch.rs  stackup_via.rs  stripline_alpha.rs  stripline_eeff.rs  stripline_z0.rs  verify_line_eeff.rs
crates/yee-export/: Cargo.toml
crates/yee-export/src/: dxf.rs  import.rs  lib.rs
crates/yee-export/tests/: dxf_rt.rs  gerber_001_structure.rs  gerber_002_roundtrip.rs  gerber_003_outline_structure.rs  gerber_004_outline_geometry.rs  gerber_arcs_flashes.rs  gerber_roundtrip_import.rs  kicad_001_structure.rs  kicad_002_geometry.rs
crates/yee-fdtd/: Cargo.toml  README.md  ROADMAP.md
crates/yee-fdtd/src/: boundary.rs  cpml.rs  dispersive.rs  driver.rs  grid.rs  lib.rs  lumped.rs  material.rs  ntff.rs  sources.rs  subgrid.rs  update.rs
crates/yee-fdtd/tests/: aperture_port_001.rs  berenger_fine_e_snapshots.rs  berenger_skeleton.rs  berenger_traversal.rs  cap_cw_001.rs  cavity_higher_mode.rs  cavity_q.rs  cavity_resonance.rs  cpml_per_axis_001.rs  cpml_percell_eps.rs  cpml_reflection.rs  dipole_pattern.rs  dispersive.rs  fdtd_propagation.rs  heterogeneous_substrate.rs  lumped_lc_resonance.rs  lumped_resistor.rs  lumped_rlc_twoway_001.rs  ntff_dipole.rs  ohmic_skin_depth.rs  pec_mask.rs  plane_wave_finite_box.rs  plane_wave_oblique.rs  plane_wave_oblique_face_probe.rs  plane_wave_propagation.rs  reactive_deembed_001.rs  subgrid_e_interp.rs  subgrid_energy_balance.rs  subgrid_h_average.rs  subgrid_plane_wave_traversal.rs  subgrid_scaffold.rs
crates/yee-fdtd/validation/: README.md
crates/yee-fem/: Cargo.toml
crates/yee-fem/src/: assembly.rs  coupled_resonator_k.rs  dispersive.rs  element.rs  lib.rs  material.rs  microstrip_mesh.rs  microstrip_port.rs  microstrip_port_numerical.rs  open_boundary.rs  pml_mesh.rs  solve.rs
crates/yee-fem/tests/: abc2_face_block.rs  abc_face_block.rs  anisotropic_tet_assembly.rs  assembly_dimensions.rs  complex_element.rs  complex_lobpcg_smoke.rs  coupled_k_probe.rs  dispersive_newton.rs  dispersive_solve.rs  element_local_matrices.rs  fem_coupling_001.rs  fem_coupling_002.rs  fem_coupling_correct_001.rs  layered_microstrip_mesh.rs  lobpcg_smoke.rs  material_database.rs  (+14 more)
crates/yee-filter/: Cargo.toml
crates/yee-gui/: Cargo.toml  README.md
crates/yee-io/: Cargo.toml  README.md  ROADMAP.md
crates/yee-layout/: Cargo.toml
crates/yee-mesh/: Cargo.toml  README.md  ROADMAP.md  build.rs
crates/yee-mom/: .gitignore  Cargo.toml  README.md  ROADMAP.md
crates/yee-plotters/: Cargo.toml  README.md
crates/yee-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/yee-server/: Cargo.toml
crates/yee-studio/: Cargo.toml  Trunk.toml  index.html
crates/yee-studio-web/: Cargo.toml  Dioxus.toml  index.html
crates/yee-surrogate/: Cargo.toml  README.md
crates/yee-synth/: Cargo.toml
crates/yee-validation/: Cargo.toml  README.md
crates/yee-voxel/: Cargo.toml
examples/half-wave-dipole/: Cargo.toml  README.md
examples/microstrip-line/: Cargo.toml  README.md
examples/patch-2g4/: Cargo.toml  README.md
(+900 files in other folders)
