[workspace]
resolver = "2"
members = [
    "crates/yee-core",
    "crates/yee-cuda",
    "crates/yee-mesh",
    "crates/yee-mom",
    "crates/yee-fem",
    "crates/yee-fdtd",
    "crates/yee-compute",
    "crates/yee-io",
    "crates/yee-cli",
    "crates/yee-gui",
    "crates/yee-plotters",
    "crates/yee-py",
    "crates/yee-surrogate",
    "crates/yee-validation",
    "crates/yee-bench",
    "crates/yee-design",
    "crates/yee-synth",
    "crates/yee-filter",
    "crates/yee-studio",
    "crates/yee-studio-web",
    "crates/yee-layout",
    "crates/yee-voxel",
    "crates/yee-export",
    "examples/half-wave-dipole",
    "examples/microstrip-line",
    "examples/patch-2g4",
]

[workspace.package]
version       = "0.0.0"
edition       = "2024"
rust-version  = "1.92"
license       = "GPL-3.0-or-later"
authors       = ["The Yee Authors"]
repository    = "https://github.com/yee-em/yee"
homepage      = "https://github.com/yee-em/yee"
readme        = "README.md"
keywords      = ["electromagnetic", "simulation", "rf", "antenna", "cuda"]
categories    = ["science", "simulation"]

[workspace.dependencies]
# Internal crates
yee-core  = { path = "crates/yee-core",  version = "0.0.0" }
yee-cuda  = { path = "crates/yee-cuda",  version = "0.0.0" }
yee-mesh  = { path = "crates/yee-mesh",  version = "0.0.0" }
yee-mom   = { path = "crates/yee-mom",   version = "0.0.0" }
yee-fem   = { path = "crates/yee-fem",   version = "0.0.0" }
yee-fdtd  = { path = "crates/yee-fdtd",  version = "0.0.0" }
yee-compute = { path = "crates/yee-compute", version = "0.0.0" }
yee-io    = { path = "crates/yee-io",    version = "0.0.0" }
yee-plotters = { path = "crates/yee-plotters", version = "0.0.0" }
yee-surrogate = { path = "crates/yee-surrogate", version = "0.0.0" }
yee-validation = { path = "crates/yee-validation", version = "0.0.0" }
yee-design   = { path = "crates/yee-design",  version = "0.0.0" }
yee-synth    = { path = "crates/yee-synth",   version = "0.0.0" }
yee-filter   = { path = "crates/yee-filter",  version = "0.0.0" }
yee-layout   = { path = "crates/yee-layout",  version = "0.0.0" }
yee-export   = { path = "crates/yee-export",  version = "0.0.0" }

# CUDA (one binding for the whole project)
cudarc = { version = "0.19", default-features = false, features = [
    "std", "driver", "nvrtc",
    "cublas", "cublaslt", "cusolver", "cusparse", "cufft", "curand",
    "f16",
    "cuda-12080",
    "dynamic-loading",
] }

# Linear algebra
faer        = "0.23"
nalgebra    = "0.34"
ndarray     = "0.17"
sprs        = "0.11"
num-complex = "0.4"
rayon       = "1"

# Geometry
glam        = "0.30"
parry3d     = "0.22"
geo         = "0.30"
i_overlay   = "4"

# CAD / Meshing
opencascade     = "0.2"
opencascade-sys = "0.2"

# GUI / Viz
# NOTE: egui_plot 0.34 and egui_dock 0.18 still pin egui ^0.33; the first
# releases that depend on egui ^0.34 are egui_plot 0.35 and egui_dock 0.19.
# Bumping these together is the only way to keep a single egui crate version
# in the dep graph. egui-wgpu 0.34 / eframe 0.34 pull in wgpu 29, so the
# workspace wgpu must match.
egui      = "0.34"
eframe    = "0.34"
egui_plot = "0.35"
egui_dock = "0.19"
egui-wgpu = "0.34"
wgpu      = "29"
pollster  = "0.4"
bytemuck  = { version = "1", features = ["derive"] }
rerun     = { version = "0.31", default-features = false, features = ["sdk"] }
plotters  = "0.3"

# Python bindings
pyo3  = { version = "0.28", features = ["abi3-py310", "extension-module"] }
numpy = "0.28"

# Diagnostics
tracing            = "0.1"
tracing-subscriber = "0.3"
thiserror          = "1"
anyhow             = "1"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Benchmarking
criterion = "0.5"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
debug         = "line-tables-only"

[profile.dev]
opt-level = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
