[package]
name         = "yee-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee command-line tool: yee validate | mesh | run | export."
default-run  = "yee"

[[bin]]
name = "yee"
path = "src/main.rs"

[features]
default = []
cuda    = ["yee-mom/cuda", "yee-fdtd/cuda", "yee-cuda/cuda"]
gmsh    = ["yee-mesh/gmsh"]

[dependencies]
yee-core    = { workspace = true }
yee-mesh    = { workspace = true }
yee-mom     = { workspace = true }
yee-fdtd    = { workspace = true }
yee-cuda    = { workspace = true }
yee-io      = { workspace = true }
yee-plotters = { workspace = true }
yee-validation = { path = "../yee-validation", version = "0.0.0" }
num-complex = { workspace = true }
clap        = { workspace = true }
clap_complete = "4"
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
