[package]
name         = "yee-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee command-line tool: yee validate | mesh | run | export."
default-run  = "yee"

[[bin]]
name = "yee"
path = "src/main.rs"

[features]
default = []
cuda    = ["yee-mom/cuda", "yee-fdtd/cuda", "yee-cuda/cuda"]
gmsh    = ["yee-mesh/gmsh"]

[dependencies]
yee-core    = { workspace = true }
yee-mesh    = { workspace = true }
yee-mom     = { workspace = true }
yee-fdtd    = { workspace = true }
yee-cuda    = { workspace = true }
yee-io      = { workspace = true }
yee-plotters = { workspace = true }
yee-validation = { path = "../yee-validation", version = "0.0.0" }
yee-design  = { workspace = true }
yee-synth   = { workspace = true }
yee-filter  = { workspace = true }
yee-layout  = { workspace = true }
yee-export  = { workspace = true }
num-complex = { workspace = true }
clap        = { workspace = true }
clap_complete = "4"
serde       = { workspace = true }
serde_json  = { workspace = true }
# `toml` is not in the workspace dep table; declare directly to parse the
# `FilterSpec` input for `yee filter synth` (matches yee-design's rationale).
toml        = "0.8"
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
# `design_offline.rs` integration test re-implements the offline parser's
# frequency-extraction regex (so the assertion is against the prompt, not
# against the parser under test) and parses the emitted TOML to read the
# `[frequency].center_hz` row back out. `serde` is also needed for the
# `#[derive(Deserialize)]` row structs in that test.
regex      = "1"
toml       = "0.8"
serde      = { workspace = true }
