[package]
name         = "yee-cuda"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee CUDA layer: thin safe wrapper over cudarc + NVRTC kernel loader."

[features]
default = []
# Off by default so CI on non-CUDA hosts still builds.
cuda    = ["dep:cudarc"]

[dependencies]
# Phase 1 will re-add `yee-core` (shared Error/Result) and `tracing` (solver
# telemetry) — kept out for now to silence unused-dependency warnings.
cudarc      = { workspace = true, optional = true }
num-complex = { workspace = true }
thiserror   = { workspace = true }
