[package]
name         = "yee-engine"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Transport-agnostic simulation job API over the yee-compute engine (S.0, ADR-0179)."

[features]
# Passes through to yee-compute; default-on like the engine itself.
default = ["gpu"]
gpu     = ["yee-compute/gpu"]

[dependencies]
# Direct path dep (not workspace-inherited): the workspace entry pins
# default features on, but this crate re-exposes the engine's `gpu`
# feature as its own default-on passthrough.
yee-compute = { path = "../yee-compute", version = "0.0.0", default-features = false }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
# engine-verify-001 (S.5) voxelizes the fdtd-line-eeff-001 microstrip
# layout and reuses its analytic Hammerstad-Jensen eps_eff reference —
# the same pairing as yee-compute's compute-008 gate.
yee-voxel  = { path = "../yee-voxel", version = "0.0.0" }
yee-layout = { workspace = true }

[lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"
