[package]
name         = "yee-fdtd"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee FDTD solver — Phase 2 walking skeleton."

[features]
default = []
cuda    = ["yee-cuda/cuda"]

[dependencies]
yee-core    = { workspace = true }
yee-cuda    = { workspace = true, optional = true }
ndarray     = { workspace = true }
nalgebra    = { workspace = true }
num-complex = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
