[package]
name         = "yee-fem"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee 3-D Finite Element Method solver. Phase 4 eigenmode beachhead (Nedelec edge elements on tetrahedra)."

[features]
default = []

[dependencies]
yee-core        = { workspace = true }
yee-mesh        = { workspace = true }
nalgebra        = { workspace = true }
# `nalgebra-sparse` is not in `[workspace.dependencies]` at the base SHA
# (Phase 4 T4 lane brief notes the gap as an out-of-lane finding); declared
# here directly so the crate can build. Pinned to the latest minor that
# tracks `nalgebra` 0.34, matching the workspace `nalgebra` version.
nalgebra-sparse = "0.11"
# Phase 4 T5: sparse LU on `(K − σM)` for the shift-invert inner solve.
# The escape-hatch impl in `solve.rs` (`InverseIterEigen`, deflated
# inverse-power iteration) consumes `faer::SparseColMat<usize, f64>` and
# its sparse LU. Pre-flight finding: the `lobpcg` crate is not on
# crates.io as of 2026-05-18, so the T5 brief's primary path is taken
# off the table; the documented escape hatch is used instead.
faer            = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
