[package]
name         = "yee-fem"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee 3-D Finite Element Method solver. Phase 4 eigenmode beachhead (Nedelec edge elements on tetrahedra)."

[features]
default = []

[dependencies]
yee-core        = { workspace = true }
yee-mesh        = { workspace = true }
# Phase 4 FEM-EM brick B3 (ADR-0153): the quasi-TEM microstrip wave-port
# closures in `microstrip_port.rs` reuse the Hammerstad-Jensen `eps_eff`
# synthesis from `yee-layout` (validated by `geo_002_hammerstad`). A normal
# (non-dev) dependency so both `src/` and the integration tests can call it;
# `yee-layout` is a pure-geometry crate (serde-only) with no edge back to
# `yee-fem`/`yee-mesh`/`yee-core`, so this introduces no dependency cycle.
yee-layout      = { workspace = true }
nalgebra        = { workspace = true }
# `nalgebra-sparse` is not in `[workspace.dependencies]` at the base SHA
# (Phase 4 T4 lane brief notes the gap as an out-of-lane finding); declared
# here directly so the crate can build. Pinned to the latest minor that
# tracks `nalgebra` 0.34, matching the workspace `nalgebra` version.
nalgebra-sparse = "0.11"
# Phase 4 T5: sparse LU on `(K − σM)` for the shift-invert inner solve.
# The escape-hatch impl in `solve.rs` (`InverseIterEigen`, deflated
# inverse-power iteration) consumes `faer::SparseColMat<usize, f64>` and
# its sparse LU. Pre-flight finding: the `lobpcg` crate is not on
# crates.io as of 2026-05-18, so the T5 brief's primary path is taken
# off the table; the documented escape hatch is used instead.
faer            = { workspace = true }
# Phase 4.fem.eig.1 (ADR-0039): complex-coefficient lift of the element
# layer + `ComplexInverseIterEigen` peer in `solve.rs`. `num-complex` is
# already transitively present via `faer` / `nalgebra`; promoted to a
# direct dep here for clarity.
num-complex     = { workspace = true }
# Phase 4 FEM-EM brick N1 (ADR-0154): the numerical-eigenmode microstrip
# wave-port (`microstrip_port_numerical.rs`) feeds yee-mom's SHIPPED quasi-TEM
# cross-section eigenmode (`ports::NumericalCrossSection`) as the FEM port's
# `modal_e_t`. A production (non-dev) dependency so `src/` can build the port;
# acyclic — yee-mom depends only on yee-core/yee-mesh/yee-io (+ optional
# yee-cuda) with no edge back to yee-fem.
yee-mom         = { workspace = true }
# FEM-EM brick K1 (ADR-0155): the coupled-resonator-k extraction API in
# `src/coupled_resonator_k.rs` reuses the SHIPPED peak-split primitive
# `yee_filter::extract_coupling` (interior local maxima → two strongest →
# k = (f_hi²−f_lo²)/(f_hi²+f_lo²)) so the split formula is single-sourced with
# the F1.1b DSP gate rather than re-derived inline. Promoted from a dev-dep to
# a production (non-dev) dependency because `src/` now calls it. ACYCLIC:
# `yee-filter` depends only on `yee-synth`/`yee-layout` (pure, serde-only) with
# no edge back to `yee-fem` (confirmed), so this introduces no dependency cycle.
yee-filter      = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
# Phase 4.fem.eig.3.5.6 — element-layer unit tests for
# `assemble_port_face_block_projected*` use `assert_relative_eq!`.
approx = "0.5"
# FEM-EM brick 7 (ADR-0153): the 3-pole microstrip-filter S21 driven-sweep
# gate (`tests/microstrip_filter_s21.rs`) uses `yee-filter` (now a production
# dep above) for the edge-coupled dimensional synthesis + oracle grading. The
# K1 coupling gate (`tests/fem_coupling_001.rs`) uses `yee-synth` (re-exported
# via `yee-filter`) only indirectly; `yee-synth` stays a dev-dep for the
# filter-S21 test's direct use.
yee-synth  = { workspace = true }
