[package]
name         = "yee-filter"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee filter: filter-domain data model, ideal response, and spec-mask gating (Filter Phase F0)."

[lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[dependencies]
# Touchstone I/O lives in the CLI layer (`yee-cli` declares `yee-io`), so the
# library stays I/O-free; `yee-io` / `yee-core` get re-added here if a type
# from them is consumed directly in a later filter phase.
yee-synth   = { workspace = true }
# Dimensional synthesis (Filter Phase F1.2.0) inverts `yee-layout`'s validated
# Hammerstad-Jensen / Kirschning-Jansen closed-form microstrip models to size an
# edge-coupled BPF. `yee-layout` is `serde`-only (pure geometry, no EM/FDTD/
# native dep) so this keeps `yee-filter` WASM-safe (ADR-0089/0097); no cycle:
# `yee-layout` does not depend on `yee-filter`.
yee-layout  = { workspace = true }
serde       = { workspace = true }
num-complex = { workspace = true }

[dev-dependencies]
# Test-only: the dim-003 gate round-trips `EdgeCoupledDimensions` through JSON.
serde_json = { workspace = true }
# Test-only (F1.3.0, ADR-0185): engine-filter-verify-001 runs the synthesized
# stepped-impedance LPF through the yee-engine job protocol (voxelize → FDTD →
# |S21|/|S11|). Dev-deps keep the library itself WASM-safe (ADR-0089).
yee-engine = { path = "../yee-engine", version = "0.0.0" }
yee-voxel  = { path = "../yee-voxel", version = "0.0.0" }
