[package]
name         = "yee-mom"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Yee planar Method of Moments solver. CPU reference via faer, GPU hot path via yee-cuda."

[features]
default = []
cuda    = ["dep:yee-cuda", "yee-cuda/cuda"]

[dependencies]
yee-core    = { workspace = true }
yee-mesh    = { workspace = true }
yee-io      = { workspace = true }
# Optional: only pulled in when the `cuda` feature is on. Phase 0 CPU code
# does not touch yee-cuda, so leaving it unconditional would force a CUDA
# toolchain on every CPU-only build. faer / nalgebra / ndarray will return
# here in Phase 1 as the dense LU solver and basis-function machinery land.
yee-cuda    = { workspace = true, optional = true }
num-complex = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = "3"
